--- a/.htaccess
+++ b/.htaccess
@@ -4,3 +4,7 @@
   RewriteCond %{REQUEST_FILENAME} !-f
   RewriteRule  ^(.+)$ index.php?uri=$1 [QSA,L]
 </IfModule>
+
+ <IfModule mod_brotli.c>  
+  AddOutputFilterByType BROTLI_COMPRESS text/html text/plain text/xml text/css text/javascript application/x-javascript application/javascript application/json application/x-font-ttf application/vnd.ms-fontobject image/x-icon
+ </IfModule>
